2012-01-03 12:06-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: Change stack implementation to
	use lastObject/removeLastObject to implement the stack instead
	of inserting and deleting at index 0.
	* Source/NSXMLElement.m: Implemented XMLStringWithOptions:
	* Source/NSXMLNode.m: Implemented XMLStringWithOptions:,
	skeletal implementation of setStringValue:resolvingEntities:

2012-01-03  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSException.m (-raise): Only set the stack when the
	exception gets first raised. This fixes bug #35192
	Patch by Larry Campbell <lcampbel@akamai.com>

2012-01-02 22:26-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSXMLElement.h: Change _attributes to be
	a NSMutableDictionary instead of an NSMutableArray.
	* Source/NSXMLElement.m: Change implementation of some methods
	to use an NSMutableDictionary instead of arrays.  Initialize
	ivars in initializer.
	* Source/NSXMLPrivate.h: Remove redundant method.

2012-01-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSSocketStream.m (-initWithInput:output:): Attempt to
	replace deprecated GNUTLS functions with newer ones for GNUTLS >= 2.12.

2012-01-02  Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSArray.m (-objectsAtIndexes:): Fix comparision of
	unsigned variable with NSNotFound.

2012-01-02 02:26-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Minor correction. Move setName out of
	private category.
	* Tests/base/NSXMLNode/children.m: Update test.

2012-01-01  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Foundation/NSXMLDTDNode.h,
	* Headers/Foundation/NSXMLDTD.h: Remove duplicate declaration of
	ivar _name to get base to compile again.

2011-12-30  Doug Simons <doug.simons@testplant.com>

	* Source/NSXMLElement.m: Set Elements to be NSXMLElementKind.

2011-12-30 14:22-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Headers/Foundation/NSXMLDocument.h
	* Headers/Foundation/NSXMLElement.h